ignore missing children, tdf#99422

Change-Id: I2d4a7f03940045c34369876aea78c3eda81da78b